--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "client",
-  "proxy": "http://localhost:5000",
+  "name": "myportfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,8 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
